Update mobile spacing and fix broken image link

--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -159,6 +159,11 @@ li a:hover {
     margin-top: $spaceExtraLarge;
     padding-top: $spaceLarge;
     border-top: 1px solid #ccc;
+
+
+      @media (max-width:$breakpointSmall) { 
+        margin-top: $spaceMedium;
+    }
 }
 #post-end h4, #post-end p {
     margin: 0 !important;
